# kindle_patch_browser

./: README.md
c/: CMakeLists.txt
c/src/: main.c
config/: browser.conf  facebook_urls.conf
docs/: INSTALLATION.md
kual/KindleExtensions/facebook_browser/: menu.json  script.sh
python/: browser.py  config.py  facebook_handler.py  main.py  requirements.txt
